# All-In-Post-Training

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  pyproject.toml
data/: panorama.json
docs/: remote-4x3090-runbook.md
examples/: post_training_pipeline.json
examples/dataset_manifests/: code_rl.sample.manifest.json  eval.sample.manifest.json  math_rl.sample.manifest.json  opd_prompt.sample.manifest.json  sft_chat.sample.manifest.json
src/all_in_post_training/: __init__.py  catalog.py  cli.py  site.py
src/all_in_post_training/pipeline/: __init__.py  artifacts.py  audit.py  backends.py  config.py  dependencies.py  distributed_sft.py  lineage.py  preflight.py  real_sft.py  runner.py  sft_compare.py
src/all_in_post_training/templates/: __init__.py  app.js  index.html  styles.css
tests/: test_catalog.py  test_pipeline.py  test_site.py
tests/fixtures/lineage/: code_eval.jsonl  code_rl_tasks.manifest.json  final_eval_suite.jsonl  math_eval.jsonl  math_rl_prompts.jsonl  opd_fusion_prompts.jsonl  safety_instruction_tasks.jsonl  sft_chat_compact.jsonl  sft_general_chat.jsonl  sft_instruction_scale.jsonl  tool_agent_eval.jsonl  tool_agent_rl_tasks.jsonl
tests/fixtures/lineage/shards/: code_rl_tasks_part1.jsonl  code_rl_tasks_part2.jsonl
